--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="image compressor, optimize images, reduce file size, jpg compressor, png optimizer, webp converter, spicy444">
+    <meta name="keywords" content="image compressor, png to jpg, online calculator, jpg compressor, png optimizer, webp converter, spicy444, tic tac toe, password generator, online tools, password generator">
+    <meta name="description" content="Explore our collection of online tools including image compression, calculator, password generator, and more. Easily convert and optimize your images, generate secure passwords, and perform calculations with our user-friendly interfaces.">
+    <meta name="author" content="SPICY444">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Home Page</title>
     <link href="./style.css" rel="stylesheet">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,31 +17,37 @@
     </header>
 
     <main>
-        <a href="./Calculator/Calculator.html" class="card-link">
+        <a href="./Tools/Calculator.html" class="card-link">
             <div class="card">
                 <h2><i class="fa fa-calculator" aria-hidden="true"></i> Calculator</h2>
                 <p>Explore our Calculator tools.</p>
             </div>
         </a>
 
-        <a href="./Image Compression Tool/image-compressor.html" class="card-link">
+        <a href="./Tools/png to JPG Converter.html" class="card-link">
             <div class="card">
-                <h2><i class="fa fa-file-image-o"></i> Image Tools</h2>
+                <h2><i class="fa fa-file-image-o" aria-hidden="true"></i> PNG To JPG </h2>
                 <p>Explore our Image Convertor tools.</p>
             </div>
         </a>
 
-        <a href="./Image Compression Tool/image-compressor.html" class="card-link">
+        <a href="./Tools/image-compressor.html" class="card-link">
             <div class="card">
                 <h2><i class="fa fa-compress"></i> Image Compression Tool</h2>
                 <p>Compress your images online.</p>
             </div>
         </a>
    
-        <a href="./Calculator/Password generator.html" class="card-link">
+        <a href="./Tools/Password generator.html" class="card-link">
             <div class="card">
-                <h2><i class="fa fa-compress"></i> Passwords Tool</h2>
+                <h2><i class="fa fa-unlock" aria-hidden="true"></i> Passwords Tool</h2>
                 <p>Generate random passwords online.</p>
+            </div>
+        </a>
+        <a href="./Tools/Tic Tac Toe.html" class="card-link">
+            <div class="card">
+                <h2><i class="fa fa-optin-monster" aria-hidden="true"></i> Tic Tac Toe</h2>
+                <p>Play Tic Tac Toe online.</p>
             </div>
         </a>
     </main>
